--- a/index.html
+++ b/index.html
@@ -612,3 +612,11 @@
                     <div class="form-col">
                         <div class="yes-no-field">
                             <label><span class="field-number">13.</span> Bóc t
+                                <!-- Thêm đoạn này vào cuối form, trước </form> -->
+<div class="form-actions">
+    <button type="submit" id="submit-btn">Gửi dữ liệu</button>
+    <button type="reset">Xóa trắng</button>
+</div>
+
+<!-- Thêm đoạn này vào trước thẻ </body> -->
+<script src="script.js"></script>
